--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -4,7 +4,9 @@
   "description": "This is a node repo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+    "lint": "eslint .",
+    "full-test": "npm run lint && npm run test"
   },
   "keywords": [],
   "author": "",
