--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -4,9 +4,7 @@
   "description": "This is a node repo",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
-    "lint": "eslint .",
-    "full-test": "npm run lint && npm run test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
