--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -3,7 +3,7 @@
 "version": "1.0.0",
 "main": "index.js",
 "scripts": {
-"test": "mocha 0-calcul.test.js"
+"test": "mocha"
 },
 "dependencies": {
 "mocha": "^10.7.3"
